--- a/hyphoto.html
+++ b/hyphoto.html
@@ -56,26 +56,46 @@
         </section>
         <section id="one">
             <div class="inner">
+                <h2 id="content"></h2>
+                <p></p>
+                <div class="row">
+                    <div class="col-6 col-12-small">
+                        <h3>Sem turpis amet semper</h3>
+                        <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer
+                            non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien
+                            a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at
+                            odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+                    </div>
+                    <div class="col-6 col-12-small">
+                        <h3>Magna odio tempus commodo</h3>
+                        <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis
+                            commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer
+                            semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi
+                            adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
+                    </div>
+                    <!-- Break -->
+                </div>
                 <!-- Content -->
                 <div class="row">
                     <!-- Break -->
-                <div class="col-4 col-12-medium">
-                    <h3>City View</h3>
-                    <p>
-                        <a href="/hyphoto/city-view.html" class="button fit">View</a>
-                </div>
+                    <div class="col-4 col-12-medium">
+                        <h3>City View</h3>
+                        <p>
+                            <a href="/hyphoto/city-view.html" class="button fit">View</a>
+                    </div>
                     <div class="col-4 col-12-medium">
                         <h3>Landscape</h3>
                         <p>
                             <a href="/hyphoto/landscape.html" class="button fit">View</a>
-                        </div>
+                    </div>
                     <div class="col-4 col-12-medium">
                         <h3>Portrait</h3>
                         <p>
                             <a href="/hyphoto/portrait.html" class="button fit">View</a>
                     </div>
                 </div>
-                <a href="https://tuchong.com/2661459" class="button primary fit">More on Tuchong.com</a>
+                <a href="https://tuchong.com/2661459" target="_blank" class="button primary fit">More City-View&LandScape</a>
+                <a href="http://frankieportrait.lofter.com/" target="_blank" class="button primary fit">Portrait Lofter Portfolio</a>
                 <hr class="major">
             </div>
         </section>
