--- a/me.html
+++ b/me.html
@@ -75,7 +75,7 @@
           </a>
           <div class="content inner">
             <header class="major">
-              <h3>I take PHOTOS</h3>
+              <h3>I am a GEEK</h3>
             </header>
             <p>I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and environment, I have
               unlimited enthusiasm for technology, especially for computer science.</br>
