--- a/hyphoto/lolita-xiaoran.html
+++ b/hyphoto/lolita-xiaoran.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>LandScape Selection - HYPhoto</title>
+<title>Portrait Selection - HYPhoto</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css">
@@ -13,7 +13,7 @@
                 <!-- Header -->
                 <header id="header">
                         <h1>
-                                <strong>HYPhoto</strong> LandScape Selection
+                                <strong>HYPhoto</strong> Portrait Selection - Lolita
                         </h1>
                         <nav>
                                 <ul>
@@ -24,74 +24,67 @@
                 </header>
                 <!-- Main -->
                 <div id="main">
-                                <article class="thumb">
-                                                <a href="images/landscape/dalian-fujiazhuang.jpg" class="image">
-                                                        <img src="images/landscape/dalian-fujiazhuang.jpg" alt="">
-                                                </a>
-                                                <h2>Fujiazhuang - Dalian, Shenyang</h2>
-                                                <p>
-                                        </article>
-                                <article class="thumb">
-                                                <a href="images/landscape/dalian-lighthouse.jpg" class="image">
-                                                        <img src="images/landscape/dalian-lighthouse.jpg" alt="">
-                                                </a>
-                                                <h2>Port Dalian Lighthouse - Shenyang</h2>
-                                                <p>
-                                        </article>
-                                <article class="thumb">
-                                                <a href="images/landscape/champaign-night.jpg" class="image">
-                                                        <img src="images/landscape/champaign-night.jpg" alt="">
-                                                </a>
-                                                <h2>Champaign Starring Night - Champaign, IL</h2>
-                                                <p>
-                                        </article>
-                                <article class="thumb">
-                                                <a href="images/landscape/japan-sunrise.jpg" class="image">
-                                                        <img src="images/landscape/japan-sunrise.jpg" alt="">
-                                                </a>
-                                                <h2>Japan Sunrise</h2>
-                                                <p>
-                                        </article>
                         <article class="thumb">
-                                <a href="images/landscape/lake-michigan.jpg" class="image">
-                                        <img src="images/landscape/lake-michigan.jpg" alt="">
+                                <a href="http://imglf3.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzc0VtL0liaXUwTlIvdW5qcDhaRHdIUFdjRW5WUGpzc0d3PT0.jpg?imageView&thumbnail=2996y1999&type=jpg&quality=96&stripmeta=0&type=jpg" class="image">
+                                        <img src="http://imglf3.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzc0VtL0liaXUwTlIvdW5qcDhaRHdIUFdjRW5WUGpzc0d3PT0.jpg?imageView&thumbnail=2996y1999&type=jpg&quality=96&stripmeta=0&type=jpg" alt="">
                                 </a>
-                                <h2>Lake Michigan - View from Chicago, IL</h2>
+                                <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="images/landscape/mount-rainer.jpg" class="image">
-                                        <img src="images/landscape/mount-rainer.jpg" alt="">
+                                <a href="http://imglf4.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzZ1oraW1kcThhNHlVK2J5Y25GK0g2Rjh0SDF1d21oTFVnPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" class="image">
+                                        <img src="http://imglf4.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzZ1oraW1kcThhNHlVK2J5Y25GK0g2Rjh0SDF1d21oTFVnPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" alt="">
                                 </a>
-                                <h2>Mt Rainer - Seattle, WA</h2>
+                                <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="images/landscape/jiuzhaigou.jpg" class="image">
-                                        <img src="images/landscape/jiuzhaigou.jpg" alt="">
+                                <a href="http://imglf6.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzbDgxZE5lbTdxdmVEUXZBMENVdFNGejhnL2ZOcm0xcWJnPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" class="image">
+                                        <img src="http://imglf6.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzbDgxZE5lbTdxdmVEUXZBMENVdFNGejhnL2ZOcm0xcWJnPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" alt="">
                                 </a>
-                                <h2>Jiuzhaigou, Sichuan</h2>
+                                <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="images/landscape/huanglong.jpg" class="image">
-                                        <img src="images/landscape/huanglong.jpg" alt="">
+                                <a href="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzcnBLTHR0blB6TTM4Wng2ckF2VWtVNHFRMk53U2VMU0xnPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" class="image">
+                                        <img src="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzcnBLTHR0blB6TTM4Wng2ckF2VWtVNHFRMk53U2VMU0xnPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" alt="">
                                 </a>
-                                <h2>Huanglong, Sichuan</h2>
+                                <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="images/landscape/huanglong2.jpg" class="image">
-                                        <img src="images/landscape/huanglong2.jpg" alt="">
+                                <a href="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzcklab3JzbnBsN1IwRUpkeWFMWm1hL0d2Q2szMzBCMTVRPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" class="image">
+                                        <img src="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzcklab3JzbnBsN1IwRUpkeWFMWm1hL0d2Q2szMzBCMTVRPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" alt="">
                                 </a>
-                                <h2>Huanglong, Sichuan</h2>
+                                <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="images/landscape/view-from-air.jpg" class="image">
-                                        <img src="images/landscape/view-from-air.jpg" alt="">
+                                <a href="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzdVFweXVCS0dtUTYvS0RPeHI3MTcwaHIwdDRBaDVNUjFRPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" class="image">
+                                        <img src="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzdVFweXVCS0dtUTYvS0RPeHI3MTcwaHIwdDRBaDVNUjFRPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" alt="">
                                 </a>
-                                <h2>View from CA4102</h2>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="http://imglf4.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzdVQ4M1g4aUpMUjJqZWdjekhmTXhnb2Q2Y0JqbHFWbmJRPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" class="image">
+                                        <img src="http://imglf4.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzdVQ4M1g4aUpMUjJqZWdjekhmTXhnb2Q2Y0JqbHFWbmJRPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzbk9UVTVHZm5VOHlJN3JQcjRxb3ZZN3FVeVhDbld3QW5BPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" class="image">
+                                        <img src="http://imglf5.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzbk9UVTVHZm5VOHlJN3JQcjRxb3ZZN3FVeVhDbld3QW5BPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" alt="">
+                                </a>
+                                <h2></h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="http://imglf3.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzbEowUG1KWW1ZTFBlRmtCWS9yTmZvT0I3d1c3MThjQUp3PT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" class="image">
+                                        <img src="http://imglf3.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzbEowUG1KWW1ZTFBlRmtCWS9yTmZvT0I3d1c3MThjQUp3PT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg" alt="">
+                                </a>
+                                <h2></h2>
                                 <p>
                         </article>
                 </div>
