update backup link

--- a/vpn/mac.html
+++ b/vpn/mac.html
@@ -25,6 +25,7 @@
 <h2>I. 准备工作</h2>
 1. 使用<b>系统浏览器</b>打开该链接：</br>
 https://frankieyuan.com/vpn/downloads/ShadowsocksX-NG.1.7.1.zip </br>
+备用地址：http://ys-i.ys168.com/606124855/VJgOwun5L5J3O75H6N83/ShadowsocksX-NG.1.7.1.zip</br>
 会自动开始下载，解压缩至桌面后双击打开。</br>
 (如打开时出现“安全提示”，请依次打开 - 苹果菜单 >“系统偏好设置”，点按“安全性与隐私”，然后点按“通用”，点击“仍要打开”按钮)</br>
 2. 使用电脑版微信打开客服提供的二维码（配置码），将配置码显示在电脑屏幕上。
