--- a/vpn/android.html
+++ b/vpn/android.html
@@ -25,6 +25,7 @@
 <h2>I. 准备工作</h2>
 1. 使用<b>系统浏览器</b>打开该链接：</br>
 https://frankieyuan.com/vpn/downloads/shadowsocks--universal-4.5.7.apk</br>
+备用地址：http://ys-i.ys168.com/606124840/l5L5J3O75H6N81TNfKxw/shadowsocks--universal-4.5.7.apk</br>
 会自动开始下载，完成后安装并打开。</br>
 2. 将客服提供的二维码（配置码）保存在手机相册中。
 <hr>
