--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <li><a href="tensorflow.html">Tensorflow Project</a>
 <li><a href="peaband.html">Conceptual Wearable Device</a>
 <li><a href="vpn/index.html">Vitrual Private Network</a>
-<li><a href="hyphoto.html">Amateur Photography</a>
+<li><a href="photo.html">Photography</a>
 <li><a href="me.html">About Me</a></ul></nav><!-- Banner -->
 <section id="banner" class="major">
 <div class="inner">
@@ -46,7 +46,7 @@ seek Respect, not Attention.
 <p>Connect you to the world (in Chinese)</header></article>
 <article><span class="image"><img src="images/hyphoto.jpg" alt=""></span>
 <header class="major">
-<h3><a href="hyphoto.html" class="link">Photography</a></h3>
+<h3><a href="photo.html" class="link">Photography</a></h3>
 <p>Landscape | City View | Portrait</header></article>
 <article><span class="image"><img src="images/me.jpg" alt=""></span>
 <header class="major">
