--- a/me.html
+++ b/me.html
@@ -35,7 +35,7 @@
               <li>
                 <a href="vpn/index.html">Vitrual Private Network</a>
                 <li>
-                  <a href="hyphoto.html">Amateur Photography</a>
+                  <a href="photo.html">Photography</a>
                   <li>
                     <a href="me.html">About Me</a>
       </ul>
@@ -113,7 +113,7 @@
               My Devices: [Sony α7r] with Zeiss 24-70mm F4 and Zeiss 55mm F1.8; [Sony RX100M3]; [iPhone7Plus]
               <ul class="actions">
                 <li>
-                  <a href="hyphoto.html" class="button">Gallery</a>
+                  <a href="photo.html" class="button">Gallery</a>
               </ul>
           </div>
         </section>
