--- a/peaband.html
+++ b/peaband.html
@@ -34,7 +34,7 @@
                             <li>
                                 <a href="vpn/index.html">Vitrual Private Network</a>
                                 <li>
-                                    <a href="hyphoto.html">Amateur Photography</a>
+                                    <a href="photo.html">Photography</a>
                                     <li>
                                         <a href="me.html">About Me</a>
             </ul>
