--- a/photo.html
+++ b/photo.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<title>HYPhoto - Amateur Photography</title>
+<title>HYPhoto | Frankie人像摄影</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css">
 <noscript>
     <link rel="stylesheet" href="assets/css/noscript.css">
 </noscript>
-<meta name="keywords" content="HYPhoto, Photography, Landscape, City view, Portrait">
-<meta name="description" content="HYPhoto - Landscape | City view | Portrait - Use Photos to Record Life">
+<meta name="keywords" content="HYPhoto, Frankie Portrait, Frankie人像摄影, Photography, Landscape, City view, Portrait">
+<meta name="description" content="HYPhoto - Landscape | City view | Portrait - Capture Life Moments">
 
 <body class="is-preload">
     <!-- Wrapper -->
@@ -35,7 +35,7 @@
                             <li>
                                 <a href="vpn/index.html">Vitrual Private Network</a>
                                 <li>
-                                    <a href="hyphoto.html">Amateur Photography</a>
+                                    <a href="hyphoto.html">Photography</a>
                                     <li>
                                         <a href="me.html">About Me</a>
             </ul>
@@ -48,10 +48,11 @@
                     <img src="images/sakura.jpg" alt="">
                 </span>
                 <header class="major">
-                    <h1>HYPhoto</h1>
+                    <h1>HYPhoto | Frankie人像摄影</h1>
                 </header>
                 <div class="content">
-                    <p>Capture Life Moments</div>
+                    <p>Capture Life Moments
+                    </div>
             </div>
         </section>
         <section id="one">
@@ -60,10 +61,11 @@
                     <div class="col-6 col-12-small">
                         <h3>Scenery Collections</h3>
                         <p></p>
-                        <a href="https://tuchong.com/2661459" target="_blank" class="button primary fit">More Scenery Photos</a>
+                        <a href="https://tuchong.com/2661459" target="_blank" class="button primary fit">My Tuchong Photo Index</a>
                     </div>
                     <div class="col-6 col-12-small">
                         <h3>Portrait Collections</h3>
+                        <h3>约拍请联系QQ1311009761</h3>
                         <p></p>
                         <span class="image fit">
                         <a href="/hyphoto/lolita-xiaoran.html"><img src="http://imglf3.nosdn0.126.net/img/bXZtRTA5emJTRVgrcmhDeEUwYmpzc0VtL0liaXUwTlIvdW5qcDhaRHdIUFdjRW5WUGpzc0d3PT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg"
