--- a/tensorflow.html
+++ b/tensorflow.html
@@ -17,7 +17,7 @@
 <li><a href="tensorflow.html">Tensorflow Project</a>
 <li><a href="peaband.html">Conceptual Wearable Device</a>
 <li><a href="vpn/index.html">Vitrual Private Network</a>
-<li><a href="hyphoto.html">Amateur Photography</a>
+<li><a href="photo.html">Photography</a>
 <li><a href="me.html">About Me</a></ul></nav><!-- Main -->
 <div id="main" class="alt"><!-- One -->
 <section id="one">
