--- a/photo.html
+++ b/photo.html
@@ -48,7 +48,7 @@
                     <img src="images/sakura.jpg" alt="">
                 </span>
                 <header class="major">
-                    <h1>HYPhoto | Frankie人像摄影</h1>
+                    <h1>HYPhoto | Frankie Portrait</h1>
                 </header>
                 <div class="content">
                     <p>Capture Life Moments
