--- a/photo.html
+++ b/photo.html
@@ -48,7 +48,7 @@
                     <img src="images/sakura.jpg" alt="">
                 </span>
                 <header class="major">
-                    <h1>HYPhoto | Frankie Portrait</h1>
+                    <h1>HYPhoto by Frankie</h1>
                 </header>
                 <div class="content">
                     <p>Capture Life Moments
@@ -59,12 +59,12 @@
             <div class="inner">
                 <div class="row">
                     <div class="col-6 col-12-small">
-                        <h3>Scenery Collections</h3>
+                        <h3>HYPhoto Scenery Collections</h3>
                         <p></p>
                         <a href="https://tuchong.com/2661459" target="_blank" class="button primary fit">My Tuchong Photo Index</a>
                     </div>
                     <div class="col-6 col-12-small">
-                        <h3>Portrait Collections</h3>
+                        <h3>Frankie Portrait Collections</h3>
                         <h3>约拍请联系QQ1311009761</h3>
                         <p></p>
                         <span class="image fit">
