update the Index

--- a/me.html
+++ b/me.html
@@ -28,16 +28,16 @@
       <ul class="links">
         <li>
           <a href="index.html">Home</a>
-          <li>
-            <a href="tensorflow.html">Tensorflow Project</a>
-            <li>
-              <a href="peaband.html">Conceptual Wearable Device</a>
-              <li>
-                <a href="vpn/index.html">Vitrual Private Network</a>
-                <li>
-                  <a href="photo.html">Photography</a>
-                  <li>
-                    <a href="me.html">About Me</a>
+        <li>
+          <a href="tensorflow.html">Tensorflow Project</a>
+        <li>
+          <a href="peaband.html">Conceptual Wearable Device</a>
+        <li>
+          <a href="vpn/index.html">Vitrual Private Network</a>
+        <li>
+          <a href="photo.html">Photography</a>
+        <li>
+          <a href="me.html">About Me</a>
       </ul>
     </nav>
     <!-- Banner -->
@@ -52,7 +52,8 @@
         </header>
         <div class="content">
           <p>I am ...
-            <br> Geek | Photogrpher | Life Explorer</div>
+            <br> Geek | Photogrpher | Life Explorer
+        </div>
       </div>
     </section>
     <!-- Main -->
@@ -77,20 +78,29 @@
             <header class="major">
               <h3>I am a GEEK</h3>
             </header>
-            <p>I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and environment, I have
+            <p>I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and
+              environment, I have
               unlimited enthusiasm for technology, especially for computer science.</br>
-              I graduated from Beijing Bayi School International Department, a place full of creativity and energetics. Seizing every opportunity
-              to step closer to my dream, in high school, a tech club reviewing new digital products was founded by me; I
-              also led a team to participate in Diamond Challenge, a global business concept competition held by University
+              I graduated from Beijing Bayi School International Department, a place full of creativity and energetics.
+              Seizing every opportunity
+              to step closer to my dream, in high school, a tech club reviewing new digital products was founded by me;
+              I also led a team to participate in Diamond Challenge, a global business concept competition held by
+              University
               of Delaware.
               </br>
-              Now, I am studying in Pre-Engineering at the University of Illinois at Urbana-Champaign. There are much more chances to meet
-              with world-leading technology. Aiming to be a successful product manager in Artifical Intelligence field, I
-              am highly motivated to learn from relative academic resources and be involved in various campus activities.
+              Now, I am studying in Computer Science at the University of Illinois at Urbana-Champaign. There are much
+              more chances to meet
+              with world-leading technology. Aiming to be a successful product manager in Artifical Intelligence field,
+              I
+              am highly motivated to learn from relative academic resources and be involved in various campus
+              activities.
               </br>
-              I developed a messaging robot to response questions from incoming students automatically. With Special Interest Group for
-              Artificial Intelligence in Association for Computing Machinery, I learned lots of AI concepts and was planning
-              to start a road sign recognition project. In addition, I had an internship as a software testing engineer at
+              I developed a messaging robot to response questions from incoming students automatically. With Special
+              Interest Group for
+              Artificial Intelligence in Association for Computing Machinery, I learned lots of AI concepts and was
+              planning
+              to start a road sign recognition project. In addition, I had an internship as a software testing engineer
+              at
               HXT Semiconductor Technology in Summer 2018. </br>
               Please visit Linkedin Page to see my professional experience and resume.</br>
               <ul class="actions">
@@ -108,9 +118,10 @@
             <header class="major">
               <h3>I take PHOTOS</h3>
             </header>
-            <p>I am also a big fan of photography, a way to capture valuable life moments. Landscape, City View, and Portrait
+            <p>I am also a big fan of photography, a way to capture valuable life moments. Landscape, City View, and
+              Portrait
               are three themes that I took most.</br>
-              My Devices: [Sony α7r] with Zeiss 24-70mm F4 and Zeiss 55mm F1.8; [Sony RX100M3]; [iPhone7Plus]
+              My Devices: [Sony α7r] with Zeiss 24-70mm F4, Zeiss 55mm F1.8, Sony 24mm F1.4 GM; [Sony RX100M3]; [iPhone7Plus]
               <ul class="actions">
                 <li>
                   <a href="photo.html" class="button">Gallery</a>
@@ -126,8 +137,10 @@
               <h3>I love this WORLD</h3>
             </header>
             <p>"Life is like not to bold adventure, then nothing."</br>
-              Yes, I am challenging myself all the time. Besides Computer Science, there are much more fun roles to be in this boring life.</br>
-              In high school, I was the stage manager of "Our Town" for Bulc Amard Drama Club; I was Art Editor and Design Manager for
+              Yes, I am challenging myself all the time. Besides Computer Science, there are much more fun roles to be
+              in this boring life.</br>
+              In high school, I was the stage manager of "Our Town" for Bulc Amard Drama Club; I was Art Editor and
+              Design Manager for
               Survive Magazine; I was an English teacher at Immigrant Wenhua School...</br>
               At University, even though I know nothing about art, I took Painting and World Music courses...</br>
               What's NEXT? Idk, but I am ready for the NEXT.
@@ -136,14 +149,14 @@
                   <a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook">
                     <span class="label">Facebook</span>
                   </a>
-                  <li>
-                    <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
-                      <span class="label">Weibo</span>
-                    </a>
-                    <li>
-                      <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
-                        <span class="label">LinkedIn</span>
-                      </a>
+                <li>
+                  <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
+                    <span class="label">Weibo</span>
+                  </a>
+                <li>
+                  <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
+                    <span class="label">LinkedIn</span>
+                  </a>
               </ul>
           </div>
         </section>
@@ -156,8 +169,8 @@
           </header>
           <h4>Feel free to reach out to me by
             <br> Email: frankie.yuan[at]yahoo.com
-            <br> Phone: (217)819-2998
-            <br> Wechat: 15711086806</h4>
+            <br> Phone: (217) 819-2998
+            <br> Wechat: wzguilong</h4>
           <ul class="actions"></ul>
         </div>
       </section>
@@ -170,26 +183,27 @@
             <a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook">
               <span class="label">Facebook</span>
             </a>
-            <li>
-              <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
-                <span class="label">Weibo</span>
-              </a>
-              <li>
-                <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
-                  <span class="label">LinkedIn</span>
-                </a>
-                <li>
-                  <a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github">
-                    <span class="label">GitHub</span>
-                  </a>
-                  <li>
-                    <a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin">
-                      <span class="label">LinkedIn</span>
-                    </a>
+          <li>
+            <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
+              <span class="label">Weibo</span>
+            </a>
+          <li>
+            <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
+              <span class="label">LinkedIn</span>
+            </a>
+          <li>
+            <a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github">
+              <span class="label">GitHub</span>
+            </a>
+          <li>
+            <a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin">
+              <span class="label">LinkedIn</span>
+            </a>
         </ul>
         <ul class="copyright">
           <li>© Frankie Hao Yuan
-            <li>Design: HTML5 UP</ul>
+          <li>Design: HTML5 UP
+        </ul>
       </div>
     </footer>
   </div>
