--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ seek Respect, not Attention.
 <h3>CONTACT</h3></header>
 <h4>Feel free to reach out to me by<br>
 Email: frankie.yuan[at]yahoo.com<br>
-Phone: (217)819-2998<br>
-Wechat: 15711086806</h4>
+Phone: (217) 819-2998<br>
+Wechat: wzguilong</h4>
 <ul class="actions"></ul></div></section></div><!-- Footer -->
 <footer id="footer">
 <div class="inner">
